fix: /api/tracker/events CSV export misses events without data values (#11338) (#11340)